--- a/fe-time-tracking/deploy.yaml
+++ b/fe-time-tracking/deploy.yaml
@@ -2,7 +2,7 @@
 apiVersion: serving.knative.dev/v1
 kind: Service
 metadata:
-  name: fetimetracking
+  name: #@ data.values.APP_NAME
 spec:
   template:
     spec:
