--- a/fe-time-tracking/app-build/build.yaml
+++ b/fe-time-tracking/app-build/build.yaml
@@ -2,7 +2,7 @@ apiVersion: kpack.io/v1alpha1
 kind: Image
 metadata:
   name: fe-time-tracking
-  namespace: default
+  namespace: tbs
 spec:
   builder:
     kind: ClusterBuilder
@@ -10,6 +10,6 @@ spec:
   serviceAccount: default
   source:
     git:
-      revision: v1.8
+      revision: v1.9
       url: https://github.com/jigsheth57/fe-time-tracking
   tag: harbor.run.haas-222.pez.pivotal.io/tbs/fetimetracking
